<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtletaSeniorFragment">

    <Button
        android:id="@+id/btnInsertAC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="204dp"
        android:text="@string/btnCadastro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inBairroAC"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="2dp"
        android:ems="10"
        android:hint="@string/bairro"
        android:inputType="text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/inDataNascAC"
        app:layout_constraintTop_toBottomOf="@+id/inDataNascAC" />

    <EditText
        android:id="@+id/inNomeAC"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="77dp"
        android:layout_marginBottom="39dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inDataNascAC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inDataNascAC"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/data_nasc"
        android:inputType="date"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inBairroAC"
        app:layout_constraintStart_toStartOf="@+id/inNomeAC"
        app:layout_constraintTop_toBottomOf="@+id/inNomeAC" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnInsertAC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/rbNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/no"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/cardiaco"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inBairroAC" />
</androidx.constraintlayout.widget.ConstraintLayout>